# LoggingEngine

./: .gitignore  Cargo.toml  Cargo.toml.bench  Dockerfile.log-aggregator  Dockerfile.metrics-collector  Dockerfile.ultra-logger  LICENSE  README.md  deploy.ps1  run_tests.ps1  test_config.toml
.github/workflows/: azure-kubernetes-service-helm.yml  ci-cd.yml  pr.yml  release.yml  rust.yml
benchmarks/: Cargo.toml
benchmarks/benches/: logging_performance.rs
config/: Cargo.toml
config/src/: aggregator.rs  benchmark.rs  lib.rs  logging_engine.rs  metrics.rs  ultra_logger.rs
helm-charts/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm-charts/templates/: _helpers.tpl  configmap-grafana-dashboards-config.yaml  configmap-grafana-dashboards.yaml  deployment-grafana.yaml  ingress-grafana.yaml  secret-grafana.yaml  service-grafana.yaml  service.yaml
hostbuilder/: Cargo.toml
hostbuilder/src/: lib.rs
k8s/grafana-dashboards/: log-search-analytics.json  logging-performance.json  ultra-performance-analytics.json
k8s/logging-engine-helm/: Chart.yaml  values-prod.yaml  values.yaml
k8s/logging-engine-helm/templates/: _helpers.tpl  configmap-grafana-dashboards.yaml  configmap-grafana-datasources.yaml  configmap-ultra-logger.yaml  configmap.yaml  deployment-ultra-logger.yaml  pvc-grafana.yaml
k8s/prometheus-rules/: logging-alerts.yml
log-aggregator/: Cargo.toml
log-aggregator/src/: lib.rs  main.rs
metrics-collector/: Cargo.toml
metrics-collector/src/: lib.rs  main.rs
program/: Cargo.toml
program/src/: main.rs
src/: lib.rs
tests/: README.md  component_integration_test.rs  integration_test.rs  mod.rs  property_tests.rs
tests/benchmarks/: mod.rs
tests/e2e/: comprehensive_test.rs  mod.rs
tests/fixtures/: mod.rs
tests/integration/: mod.rs  test_end_to_end.rs  test_log_aggregator.rs  test_metrics_collector.rs  test_ultra_logger.rs
tests/utils/: mod.rs
ultra-logger/: Cargo.toml
ultra-logger/src/: buffer.rs  compression.rs  config.rs  error.rs  lib.rs  lib_backup.rs  lib_simple.rs  logger.rs  metrics.rs  trace.rs  transport.rs
