[workspace]
members = [
    "program", 
    "hostbuilder",
    "ultra-logger",
    "log-aggregator",
    "metrics-collector",
    "benchmarks"
]
resolver = "2"

[workspace.dependencies]
# Ultra-low latency dependencies
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
memmap2 = "0.9"
lz4_flex = "0.11"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
zstd = "0.13"
kafka = "0.10"
redis = { version = "0.24", features = ["tokio-comp"] }
prometheus = "0.13"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
thiserror = "1.0"
config = "0.14"
bytes = "1.5"
futures = "0.3"
once_cell = "1.19"
arc-swap = "1.6"
flume = "0.11"
ringbuf = "0.3"
fastrand = "2.0"

# Performance optimization
simd-json = "0.13"
ahash = "0.8"
mimalloc = { version = "0.1", default-features = false }

# Testing dependencies
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
testcontainers = "0.15"
wiremock = "0.5"
proptest = "1.4"
quickcheck = "1.0"
mockall = "0.12"
serial_test = "3.0"
rstest = "0.18"
tokio-test = "0.4"
tracing-test = "0.2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Trading Platform Team"]
description = "Ultra-low latency logging engine for high-frequency trading systems"
license = "MIT"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false