[workspace]
members = [
    "ultra-logger",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies only
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[package]
name = "logging-engine"
version = "0.1.0"
edition = "2021"
authors = ["Nwagbara Group LLC"]
description = "Simple, fast logging for trading systems"
license = "MIT"

[lib]
name = "logging_engine"
path = "src/lib.rs"

[dependencies]
ultra-logger = { path = "ultra-logger" }

# Performance optimization
simd-json = "0.13"
ahash = "0.8"
mimalloc = { version = "0.1", default-features = false }

# Testing dependencies
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
testcontainers = "0.15"
wiremock = "0.5"
proptest = "1.4"
quickcheck = "1.0"
mockall = "0.12"
serial_test = "3.0"
rstest = "0.18"
tokio-test = "0.4"
tracing-test = "0.2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Trading Platform Team"]
description = "Ultra-low latency logging engine for high-frequency trading systems"
license = "MIT"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false