[package]
name = "logging-benchmarks"  
version = "0.1.0"
edition = "2021"

[dependencies]
ultra-logger = { path = "../ultra-logger" }
log-aggregator = { path = "../log-aggregator" }
metrics-collector = { path = "../metrics-collector" }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "logging_performance"
harness = false
