[package]
name = "config"
version = "0.1.0"
edition = "2021"
description = "Centralized configuration management for LoggingEngine"

[dependencies]
# Serialization
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Log aggregator for type conversion
log-aggregator = { path = "../log-aggregator" }

# Metrics collector for type conversion
metrics-collector = { path = "../metrics-collector" }

[dev-dependencies]
# Testing
tokio-test = { workspace = true }

[features]
default = []

# Optional features for specific environments
production-optimized = []
development-helpers = []
