[package]
name = "hostbuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

# Centralized configuration
config = { path = "../config" }

# Internal workspace dependencies
ultra-logger = { path = "../ultra-logger" }
log-aggregator = { path = "../log-aggregator" }  
metrics-collector = { path = "../metrics-collector" }

[dev-dependencies]
tokio-test = { workspace = true }
