[package]
name = "log-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "High-performance log aggregation service"
license.workspace = true

[dependencies]
ultra-logger = { path = "../ultra-logger" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
crossbeam-channel = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "log-aggregator"
path = "src/main.rs"
