[package]
name = "metrics-collector"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Ultra-low latency metrics collection service"
license.workspace = true

[dependencies]
ultra-logger = { path = "../ultra-logger" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
crossbeam-channel = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
prometheus = "0.13"

[[bin]]
name = "metrics-collector"
path = "src/main.rs"
