[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

# Centralized configuration
config = { path = "../config" }

# Internal workspace dependencies
hostbuilder = { path = "../hostbuilder" }
ultra-logger = { path = "../ultra-logger" }

# Additional dependencies for benchmarks and CLI
criterion = { version = "0.5", features = ["html_reports"] }
indicatif = "0.17"
colored = "2.0"
chrono = { workspace = true }
