[package]
name = "ultra-logger"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Ultra-low latency logger for high-frequency trading"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-utils = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
memmap2 = { workspace = true }
lz4_flex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
arc-swap = { workspace = true }
flume = { workspace = true }
ringbuf = { workspace = true }
simd-json = { workspace = true }
ahash = { workspace = true }
mimalloc = { workspace = true }
fastrand = { workspace = true }

[features]
default = ["async", "compression"]
async = []
compression = []
io-uring = []
metrics = []

[lib]
name = "ultra_logger"
path = "src/lib.rs"
