[package]
name = "ultra-logger"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Ultra-low latency logger for high-frequency trading"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# High-performance dependencies
crossbeam-channel = { workspace = true }
crossbeam-utils = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
memmap2 = { workspace = true }
lz4_flex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# Memory management and SIMD
smallvec = "1.11"
simd-json = "0.13"

# Lock-free structures
lockfree = "0.5"
flume = "0.11"

# Direct I/O and system calls (Windows compatible)
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "winnt"] }

[features]
default = ["async", "compression"]
async = []
compression = []
io-uring = []
metrics = []

[lib]
name = "ultra_logger"
path = "src/lib.rs"
