[package]
name = "ultra-logger"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Simple, fast logger for high-frequency trading"
license.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# High-performance channels
flume = "0.11"

# Error handling  
thiserror = { workspace = true }

[features]
default = []

[lib]
name = "ultra_logger"
path = "src/lib.rs"
